# Enca

./: .gitignore  .gitmodules  LICENSE  TODO.md  makefile
src/: CMakeLists.txt  Enca.cpp  colors.h  error.cpp  error.h  utils.cpp  utils.h
src/assembler/: assembler.cpp  assembler.h  instruction.cpp  instruction.h  number.h  operand.cpp  operand.h  symbols.cpp  symbols.h
src/examples/: cond.enc  conditionals.enc  instructions.enc  quick.py  syntax.enc  test.enc
src/examples/tests/: instructions.enc
src/examples/tests/data/: data.enc
src/examples/tests/instructions/: load_register.enc  nop.enc
src/grammars/: Enca.g4
src/grammars/.antlr/: Enca.interp  Enca.tokens  EncaLexer.interp  EncaLexer.java  EncaLexer.tokens  EncaParser.java
